# project_strategy

./: Cargo.toml  README.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
client/src/actions/: events.rs  systems.rs
client/src/camera/: systems.rs
client/src/core_gameplay/: components.rs  mod.rs  resources.rs  states.rs  systems.rs  ui.rs
client/src/map/: components.rs  mod.rs  systems.rs  utils.rs
client/src/player/: events.rs  systems.rs
src/: main.rs
src/actions/: mod.rs  resources.rs
src/camera/: mod.rs  systems.rs
src/core_gameplay/: events.rs  mod.rs
src/debug_gui/: mod.rs  systems.rs
src/map/: components.rs  events.rs  mod.rs  resources.rs  systems.rs  utils.rs
src/player/: components.rs  events.rs  mod.rs  systems.rs
